--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,4 +18,4 @@ spring:
       max-request-size: 10MB
   web:
     resources:
-      static-locations: file:src/main/resources/static/img/
+      static-locations: classpath:/static/
