--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/graduate"
@@ -7,7 +8,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
   jackson:
     date-format: yyyy-MM-dd
     time-zone: UTC
@@ -19,3 +20,5 @@ spring:
   web:
     resources:
       static-locations: classpath:/static/
+server:
+  port: 8080
